Bug 233944 - Okular crashes opening an .odt
Summary: Okular crashes opening an .odt
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-10 14:23 UTC by carlo cancellieri
Modified: 2010-04-11 19:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The odt make okular crashing (29.82 KB, application/vnd.oasis.opendocument.text)
2010-04-11 00:52 UTC, carlo cancellieri
Details

Note You need to log in before you can comment on or make changes to this bug.
Description carlo cancellieri 2010-04-10 14:23:14 UTC
Application: okular (0.10.80)
KDE Platform Version: 4.4.70 (KDE 4.4.70 (KDE 4.5 >= 20100330)) (Compiled from sources)
Qt Version: 4.6.2
Operating System: Linux 2.6.33-gentoo x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- What I was doing when the application crashed:

Simply double click on my CV.odt (created with this openoffice-bin installation)

It happens every time I try to open.

-- Backtrace:
Application: Okular (okular), signal: Aborted
Traceback (most recent call last):
  File "/usr/share/gdb/auto-load/usr/lib64/libgobject-2.0.so.0.2200.5-gdb.py", line 9, in <module>
    from gobject import register
  File "/usr/share/glib-2.0/gdb/gobject.py", line 3, in <module>
    import gdb.backtrace
ImportError: No module named backtrace
The current source language is "auto; currently c".
[KCrash Handler]
#6  0x00007f4f68bb3065 in *__GI_raise (sig=<value optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f4f68bb4561 in *__GI_abort () at abort.c:88
#8  0x00007f4f6a8e2c45 in qt_message_output (msgType=QtFatalMsg, buf=0xc904e8 "ASSERT failure in QVector<T>::operator[]: \"index out of range\", file /usr/include/qt4/QtCore/qvector.h, line 346")
    at global/qglobal.cpp:2250
#9  0x00007f4f6a8e2e24 in qt_message (msgType=QtFatalMsg, msg=0x7f4f6aaa35d0 "ASSERT failure in %s: \"%s\", file %s, line %d", ap=0x7fffd29fdcb0) at global/qglobal.cpp:2296
#10 0x00007f4f6a8e3691 in qFatal (msg=0x7f4f6aaa35d0 "ASSERT failure in %s: \"%s\", file %s, line %d") at global/qglobal.cpp:2479
#11 0x00007f4f6a8e2817 in qt_assert_x (where=0x7f4f6190fbc1 "QVector<T>::operator[]", what=0x7f4f6190e462 "index out of range", file=0x7f4f6190f5c8 "/usr/include/qt4/QtCore/qvector.h", line=346)
    at global/qglobal.cpp:2021
#12 0x00007f4f618f4f2e in QVector<QLinkedList<Okular::ObjectRect*> >::operator[] (this=0x7fffd29fdf30, i=17) at /usr/include/qt4/QtCore/qvector.h:346
#13 0x00007f4f618f1f8a in Okular::TextDocumentGenerator::loadDocument (this=<value optimized out>, fileName=<value optimized out>, pagesVector=<value optimized out>)
    at /var/tmp/portage/kde-base/okular-9999/work/okular-9999/okular/core/textdocumentgenerator.cpp:289
#14 0x00007f4f618d11aa in Okular::DocumentPrivate::openDocumentInternal (this=0x7889d0, offer=<value optimized out>, isstdin=<value optimized out>, docFile=..., filedata=...)
    at /var/tmp/portage/kde-base/okular-9999/work/okular-9999/okular/core/document.cpp:644
#15 0x00007f4f618d59a3 in Okular::Document::openDocument (this=0x788900, docFile=<value optimized out>, url=<value optimized out>, _mime=<value optimized out>)
    at /var/tmp/portage/kde-base/okular-9999/work/okular-9999/okular/core/document.cpp:1642
#16 0x00007f4f61b91d1a in Okular::Part::openFile (this=0x7679f0) at /var/tmp/portage/kde-base/okular-9999/work/okular-9999/okular/part.cpp:930
#17 0x00007f4f6c85dffd in KParts::ReadOnlyPart::openUrl (this=0x7679f0, url=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kparts/part.cpp:557
#18 0x00007f4f61b931b2 in Okular::Part::openUrl (this=0x7679f0, _url=<value optimized out>) at /var/tmp/portage/kde-base/okular-9999/work/okular-9999/okular/part.cpp:1049
#19 0x000000000040a047 in Shell::openUrl (this=0x756a40, url=...) at /var/tmp/portage/kde-base/okular-9999/work/okular-9999/okular/shell/shell.cpp:130
#20 0x000000000040a42c in Shell::qt_metacall (this=0x756a40, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7fffd29fee40)
    at /var/tmp/portage/kde-base/okular-9999/work/okular-9999_build/okular/shell/shell.moc:94
#21 0x00007f4f6aa221c5 in QMetaObject::metacall (object=0x756a40, cl=QMetaObject::InvokeMetaMethod, idx=57, argv=0x7fffd29fee40) at kernel/qmetaobject.cpp:237
#22 0x00007f4f6aa3865d in QMetaObject::activate (sender=0xa77ae0, m=0x7f4f6ad923e0, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3293
#23 0x00007f4f6aa421fd in QSingleShotTimer::timeout (this=0xa77ae0) at .moc/debug-shared/qtimer.moc:82
#24 0x00007f4f6aa420cd in QSingleShotTimer::timerEvent (this=0xa77ae0) at kernel/qtimer.cpp:308
#25 0x00007f4f6aa33e0d in QObject::event (this=0xa77ae0, e=0x7fffd29ff820) at kernel/qobject.cpp:1212
#26 0x00007f4f69870894 in QApplicationPrivate::notify_helper (this=0x6300d0, receiver=0xa77ae0, e=0x7fffd29ff820) at kernel/qapplication.cpp:4304
#27 0x00007f4f6986dd32 in QApplication::notify (this=0x7fffd29ffc00, receiver=0xa77ae0, e=0x7fffd29ff820) at kernel/qapplication.cpp:3708
#28 0x00007f4f6b956121 in KApplication::notify (this=0x7fffd29ffc00, receiver=0xa77ae0, event=0x7fffd29ff820)
    at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdeui/kernel/kapplication.cpp:302
#29 0x00007f4f6aa1a17c in QCoreApplication::notifyInternal (this=0x7fffd29ffc00, receiver=0xa77ae0, event=0x7fffd29ff820) at kernel/qcoreapplication.cpp:704
#30 0x00007f4f6aa1e0ef in QCoreApplication::sendEvent (receiver=0xa77ae0, event=0x7fffd29ff820) at kernel/qcoreapplication.h:215
#31 0x00007f4f6aa5a823 in QTimerInfoList::activateTimers (this=0x633d90) at kernel/qeventdispatcher_unix.cpp:603
#32 0x00007f4f6aa55bd3 in timerSourceDispatch (source=0x633d30) at kernel/qeventdispatcher_glib.cpp:184
#33 0x00007f4f6619250d in g_main_dispatch (context=0x632c70) at gmain.c:1960
#34 IA__g_main_context_dispatch (context=0x632c70) at gmain.c:2513
#35 0x00007f4f66195ec8 in g_main_context_iterate (context=0x632c70, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at gmain.c:2591
#36 0x00007f4f66195ff0 in IA__g_main_context_iteration (context=0x632c70, may_block=1) at gmain.c:2654
#37 0x00007f4f6aa5706b in QEventDispatcherGlib::processEvents (this=0x630090, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#38 0x00007f4f69957778 in QGuiEventDispatcherGlib::processEvents (this=0x630090, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#39 0x00007f4f6aa17174 in QEventLoop::processEvents (this=0x7fffd29ffba0, flags=...) at kernel/qeventloop.cpp:149
#40 0x00007f4f6aa172ca in QEventLoop::exec (this=0x7fffd29ffba0, flags=...) at kernel/qeventloop.cpp:201
#41 0x00007f4f6aa1a87e in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#42 0x00007f4f6986d8a4 in QApplication::exec () at kernel/qapplication.cpp:3583
#43 0x0000000000408f8b in main (argc=<value optimized out>, argv=<value optimized out>) at /var/tmp/portage/kde-base/okular-9999/work/okular-9999/okular/shell/main.cpp:82

Reported using DrKonqi
Comment 1 Dario Andres 2010-04-11 00:20:08 UTC
- Could you attach the ODT file that causes the crash ? (if it contains personal information you may want to try to create a similar ODT file with dummy data (but check that it crashes on Okular too))
Regards
Comment 2 carlo cancellieri 2010-04-11 00:52:48 UTC
Created attachment 42666 [details]
The odt make okular crashing

You are right, it was okular...
Comment 3 Albert Astals Cid 2010-04-11 15:44:25 UTC
Tobias can you have a look?
Comment 4 Tobias Koenig 2010-04-11 19:52:13 UTC
SVN commit 1113765 by tokoe:

Do not crash in case of false calculations in a generator

BUG: 233944


 M  +4 -0      textdocumentgenerator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1113765