Do not crash in case of false calculations in a generator

BUG: 233944

svn path=/trunk/KDE/kdegraphics/okular/; revision=1113765